# python-biblionix

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  example.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-helper-image.yaml  publish-release-to-pypi.yaml
src/biblionix/: __init__.py
