[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.7.19,<0.8.0"]

[project]
name = "biblionix"
version = "2025.1"
description = "Python client library to interface with Biblionix library systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/python-biblionix"
"Changes" = "https://github.com/williamjacksn/python-biblionix/releases"
"Issues" = "https://github.com/williamjacksn/python-biblionix/issues"
