[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.22,<0.10.0"]

[project]
name = "biblionix"
version = "2026.0"
description = "Python client library to interface with Biblionix library systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/python-biblionix"
"Changes" = "https://github.com/williamjacksn/python-biblionix/releases"
"Issues" = "https://github.com/williamjacksn/python-biblionix/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "uv-build>=0.9.22",
]


[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
